made mobile view a little more pleasing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
+  <title>Chantal Yuen</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap" >
 </head>
@@ -24,7 +26,7 @@
     <div class="left-half">
       <h2>ABOUT</h2>
     </div>
-    <div class="right-half">
+    <div class="right-half mobileFirst">
       <p>
         I'm currently exploring the world of web development.<br>
         I just moved back to the US after living in Hong Kong and Japan.<br>
@@ -41,7 +43,7 @@
     <div class="left-half">
       <h2>CONTACT</h2>
     </div>
-    <div class="right-half">
+    <div class="right-half mobileSecond">
       <p>
         <strong>Chantal Yuen</strong>
       </p>
