working on version 2

--- a/index.html
+++ b/index.html
@@ -1,61 +1,125 @@
 <!DOCTYPE HTML>
+<!--
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 
 <head>
-  <title>Chantal Yuen</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap" >
+	<title>Chantal Yuen</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
-<body>
-  <div id="navbar">
-    <li><a class="navLeft" href="#home">HOME</a></li>
-    <li><a class="navRight" href="#contact">CONTACT</a></li>
-    <li><a class="navRight" href="#about">ABOUT</a></li>
-  </div>
-  <a id="home"></a>
-  <div class="parallax">
-    <h1 id="start">
-      Hi, I'm Chantal
-    </h1>
-  </div>
-  <a id="about"></a>
-  <section class="container">
-    <div class="left-half">
-      <h2>ABOUT</h2>
-    </div>
-    <div class="right-half mobileFirst">
-      <p>
-        I'm currently exploring the world of web development.<br>
-        I just moved back to the US after living in Hong Kong and Japan.<br>
-        I love travelling and am always up for trying new things.<br>
-      </p>
-      <br>
-      <p class="body-links">
-        Download my <a href="cv.pdf">CV</a>.
-      </p>
-    </div>
-  </section>
-  <a id="contact"></a>
-  <section class="container">
-    <div class="left-half">
-      <h2>CONTACT</h2>
-    </div>
-    <div class="right-half mobileSecond">
-      <p>
-        <strong>Chantal Yuen</strong>
-      </p>
-      <p class="body-links">
-        <a href="mailto:cyhk116@gmail.com">cyhk116@gmail.com</a>
-      </p>
-      <br>
-      <p>
-        <a href="https://www.github.com/cyhk"><img src="GitHub-Mark-120px-plus.png" width="40" height="40"></a>
-      </p>
-    </div>
-  </section>
+<body class="is-preload">
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Header -->
+		<header id="header">
+			<div class="logo">
+				<span class="icon fa-paper-plane"></span>
+			</div>
+			<div class="content">
+				<div class="inner">
+					<h1>Chantal Yuen</h1>
+					<p>Software Engineer based in San Francisco, CA</p>
+				</div>
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#intro">Intro</a></li>
+					<li><a href="#work">Work</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- Intro -->
+			<article id="intro">
+				<h2 class="major">Intro</h2>
+				<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+				<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue.
+					Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi
+					nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.
+				</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti
+					sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh
+					porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum.
+					Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in
+					aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+					turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed
+					vehicula.</p>
+			</article>
+
+			<!-- Work -->
+			<article id="work">
+				<h2 class="major">Projects</h2>
+				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+				<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam
+					erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec
+					lorem luctus ultrices.</p>
+				<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc
+					rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel
+					lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis
+					libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+			</article>
+
+			<!-- About -->
+			<article id="about">
+				<h2 class="major">About</h2>
+				<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+				<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend
+					sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam.
+					Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis
+					in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+			</article>
+
+			<!-- Contact -->
+			<article id="contact">
+				<h2 class="major">Contact</h2>
+				<h3>Phone</h3>
+				<p>(669) 208-8493</p>
+				<h3>Email</h3>
+				<p>cyhk116@gmail.com</p>
+			</article>
+
+		</div>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="https://github.com/cyhk" class="icon brands fa-github"><span class="label">Github</span></a></li>
+				<li><a href="https://www.linkedin.com/in/chantal-yuen-6b57a657/" class="icon brands fab fa-linkedin"><span
+							class="label">Linkedin</span></a></li>
+				<li><a href="https://angel.co/cyhk" class="icon brands fa-angellist"><span class="label">AngelList</span></a>
+				</li>
+			</ul>
+
+			<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>. Photo by Anna Goncharova on Unsplash.</p>
+		</footer>
+
+	</div>
+
+	<!-- BG -->
+	<div id="bg"></div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
